2005-10-04  Andrew Cagney  <cagney@redhat.com>

	* TestStep.java: Move PidChild call to ProcCreatedObserver, delete
	global "pid".
	* TestLib.java: In class Child, always register the pid.

	* TestStep.java, TestAttachCloningThreads.java: Replace
	StopEventLoopOnProcDestroy with PidChild and Child
	.stopEventLoopOnDestroy.
	* TestLib.java: Add class PidChild.  Add method
	stopEventLoopOnDestroy to Child class.

	* Host.java, HostState.java: Add "Perform" prefix to
	PerformCreateAttachedProc event.

	* Host.java: Replace sendCreateProc with sendCreateAttachedProc.
	Replace requestCreateProc with requestCreateAttachedContinuedProc,
	and the private performCreateAttachedProc.
	* TestTerminated.java, TestSyscallOpen.java, TestSyscall.java,
	TestSyscall2.java, TestStep.java, TestRun.java, TestProcGet.java,
	TestLib.java, TestI386Regs.java, TestI386Modify.java,
	TestFork.java, TestExiting.java, TestExec.java, TestClone.java,
	LinuxHost.java, HostState.java: Update.

	* Host.java: Create nested HostEvents.
	* HostState.java: Replace existing "process" methods with
	"processRequestRefresh", "processRequestCreateProc", and
	"processRequestAttachProc".
	* HostEvent.java: Delete RequestRefresh, RequestCreateProc, and
	RequestAttachProc.

2005-10-03  Andrew Cagney  <cagney@redhat.com>

	* TestTerminated.java, TestSyscallOpen.java, TestSyscall.java,
	TestSyscall2.java, TestStep.java, TestStopAndStop.java,
	TestStopAndGo.java, TestGoAndGo.java, TestI386Regs.java,
	TestI386Modify.java, TestAttachCloningThreads.java,
	TestExiting.java, TestPaused.java, TestStop.java,
	TestUnpaused.java: Replace Proc .taskDiscovered with Proc
	.observableTaskAdded.

	* TaskState.java: Move observableTaskAdded from here ...
	* Task.java (Task): ... and from here ...
	* Proc.java (add (Task)): .. to here.

	* TestStep.java: Inline call to stopAllTasks.
	* Proc.java: Delete startAllTasks, and stopAllTasks.

	* LinuxHost.java: Delete unused local "searchId".