@@ -57,7 +57,6 @@ public class TestGoAndGo
     Task mainTask;
     Task thread1;
     Task thread2;
-    int pid;
     int taskCreatedCount;
     int taskDestroyedCount;
     int taskStopCount;
@@ -70,11 +69,16 @@ public class TestGoAndGo
     class ProcCreatedObserver
         implements Observer
     {
-	Task task;
+	int pid;
+	ProcCreatedObserver (int pid)
+	{
+	    this.pid = pid;
+	}
         public void update (Observable o, Object obj)
         {
             Proc proc = (Proc) obj;
-	    pid = proc.id.hashCode ();
+	    if (proc.id.hashCode () != pid)
+		return;
             proc.observableTaskAdded.addObserver (new TaskCreatedObserver ());
 	    proc.observableTaskRemoved.addObserver (new TaskDestroyedObserver ());
         }
@@ -182,14 +186,12 @@ public class TestGoAndGo
 
     public void testGoAndGo ()
     {
-        Manager.host.observableProcAdded.addObserver (new ProcCreatedObserver ());
-
 	// Create threaded infinite loop
 	int pid = XXX.infThreadLoop (2);
-	Manager.host.requestAttachProc (new ProcId (pid));
+	Child child = new PidChild (pid);
+        Manager.host.observableProcAdded.addObserver (new ProcCreatedObserver (pid));
 
-        // Register child to be removed at end of test
-        registerChild (pid);
+	Manager.host.requestAttachProc (new ProcId (pid));
 
 	assertRunUntilStop ("XXX: run until?");
 
