@@ -58,7 +58,6 @@ public class TestUnpaused
     Task mainTask;
     Task thread1;
     Task thread2;
-    int pid;
     int taskCreatedCount;
     int taskDestroyedCount;
     int taskStopCount;
@@ -69,11 +68,16 @@ public class TestUnpaused
     class ProcCreatedObserver
         implements Observer
     {
-	Task task;
+	int pid;
+	ProcCreatedObserver (int pid)
+	{
+	    this.pid = pid;
+	}
         public void update (Observable o, Object obj)
         {
             Proc proc = (Proc) obj;
-	    pid = proc.id.hashCode ();
+	    if (proc.id.hashCode () != pid)
+		return;
             proc.observableTaskAdded.addObserver (new TaskCreatedObserver ());
 	    proc.observableTaskRemoved.addObserver (new TaskDestroyedObserver ());
         }
@@ -260,13 +264,10 @@ public class TestUnpaused
 
     public void testUnpaused ()
     {
-        Manager.host.observableProcAdded.addObserver (new ProcCreatedObserver ());
-
 	int pid = XXX.infThreadLoop (2);
+	Child child = new PidChild (pid);
+        Manager.host.observableProcAdded.addObserver (new ProcCreatedObserver (pid));
 	Manager.host.requestAttachProc (new ProcId (pid));
-
-	// Register child to be removed at end of test
-	registerChild (pid);	
 
 	assertRunUntilStop ("XXX: run until?");
 
